--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     },
     "dependencies": {
         "@jupyterlab/application": "^4.0.0",
+        "@jupyterlab/launcher": "^4.5.0",
         "@jupyterlab/settingregistry": "^4.0.0"
     },
     "devDependencies": {
