--- a/package.json
+++ b/package.json
@@ -70,8 +70,10 @@
         "@storybook/react-webpack5": "9.1.7",
         "@types/jest": "^29.2.0",
         "@types/json-schema": "^7.0.11",
+        "@types/node": "^24.10.2",
         "@types/react": "^18.0.26",
         "@types/react-addons-linked-state-mixin": "^0.14.22",
+        "@types/react-dom": "^19.2.3",
         "@typescript-eslint/eslint-plugin": "^6.1.0",
         "@typescript-eslint/parser": "^6.1.0",
         "css-loader": "^6.7.1",
