--- a/package.json
+++ b/package.json
@@ -59,9 +59,12 @@
         "build-storybook": "storybook build"
     },
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.1",
         "@jupyterlab/application": "^4.0.0",
         "@jupyterlab/launcher": "^4.5.0",
-        "@jupyterlab/settingregistry": "^4.0.0"
+        "@jupyterlab/settingregistry": "^4.0.0",
+        "@mui/material": "^7.3.6"
     },
     "devDependencies": {
         "@jupyterlab/builder": "^4.0.0",
