--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
         "build:prod": "jlpm clean && jlpm build:lib:prod && jlpm build:labextension",
         "build:labextension": "jupyter labextension build .",
         "build:labextension:dev": "jupyter labextension build --development True .",
-        "build:lib": "tsc --sourceMap",
-        "build:lib:prod": "tsc",
+        "build:lib": "tsr generate && tsc --sourceMap",
+        "build:lib:prod": "tsr generate && tsc",
         "clean": "jlpm clean:lib",
         "clean:lib": "rimraf lib tsconfig.tsbuildinfo",
         "clean:lintcache": "rimraf .eslintcache .stylelintcache",
@@ -52,10 +52,12 @@
         "stylelint": "jlpm stylelint:check --fix",
         "stylelint:check": "stylelint --cache \"style/**/*.css\"",
         "test": "jest --coverage",
-        "watch": "run-p watch:src watch:labextension",
+        "watch": "run-p watch:routes watch:src watch:labextension",
+        "watch:routes": "tsr watch",
         "watch:src": "tsc -w --sourceMap",
         "watch:labextension": "jupyter labextension watch .",
-        "storybook": "storybook dev -p 6006",
+        "storybook": "run-p watch:routes storybook:dev",
+        "storybook:dev": "storybook dev -p 6006",
         "build-storybook": "storybook build"
     },
     "dependencies": {
@@ -64,13 +66,15 @@
         "@jupyterlab/application": "^4.0.0",
         "@jupyterlab/launcher": "^4.5.0",
         "@jupyterlab/settingregistry": "^4.0.0",
-        "@mui/material": "^7.3.6"
+        "@mui/material": "^7.3.6",
+        "@tanstack/react-router": "^1.140.5"
     },
     "devDependencies": {
         "@jupyterlab/builder": "^4.0.0",
         "@jupyterlab/testutils": "^4.0.0",
         "@storybook/addon-webpack5-compiler-swc": "^4.0.2",
         "@storybook/react-webpack5": "9.1.7",
+        "@tanstack/router-cli": "^1.140.5",
         "@types/jest": "^29.2.0",
         "@types/json-schema": "^7.0.11",
         "@types/node": "^24.10.2",
