--- a/package.json
+++ b/package.json
@@ -89,6 +89,8 @@
         "eslint-plugin-prettier": "^5.0.0",
         "eslint-plugin-storybook": "9.1.7",
         "jest": "^29.2.0",
+        "msw": "^2.12.4",
+        "msw-storybook-addon": "^2.0.6",
         "npm-run-all2": "^7.0.1",
         "prettier": "^3.0.0",
         "rimraf": "^5.0.1",
@@ -213,5 +215,10 @@
             "selector-no-vendor-prefix": null,
             "value-no-vendor-prefix": null
         }
+    },
+    "msw": {
+        "workerDirectory": [
+            "public"
+        ]
     }
 }
