--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ classifiers = [
     "Programming Language :: Python :: 3.14",
 ]
 dependencies = [
+    "NaaVRE-communicator-jupyterlab>=0.3.1"
 ]
 dynamic = ["version", "description", "authors", "urls", "keywords"]
 
