--- a/package.json
+++ b/package.json
@@ -66,8 +66,12 @@
         "@jupyterlab/application": "^4.0.0",
         "@jupyterlab/launcher": "^4.5.0",
         "@jupyterlab/settingregistry": "^4.0.0",
+        "@mantine/hooks": "^7.17.8",
+        "@mui/icons-material": "^7.3.6",
         "@mui/material": "^7.3.6",
-        "@tanstack/react-router": "^1.140.5"
+        "@naavre/communicator-jupyterlab": "^0.3.1",
+        "@tanstack/react-router": "^1.140.5",
+        "lodash": "^4.17.21"
     },
     "devDependencies": {
         "@jupyterlab/builder": "^4.0.0",
@@ -77,6 +81,7 @@
         "@tanstack/router-cli": "^1.140.5",
         "@types/jest": "^29.2.0",
         "@types/json-schema": "^7.0.11",
+        "@types/lodash": "^4.17.21",
         "@types/node": "^24.10.2",
         "@types/react": "^18.0.26",
         "@types/react-addons-linked-state-mixin": "^0.14.22",
